src/objects/Partner_Event__c.object
<CustomObject>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Please enter City for event location</description>
        <label>Location</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Event_Type__c</fullName>
        <label>Partner Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Joint Event</fullName>
                </value>
                <value>
                    <fullName>Blitz Campaign</fullName>
                </value>
                <value>
                    <fullName>Partner Training</fullName>
                </value>
                <value>
                    <fullName>Partner Office Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Office</label>
        <referenceTo>Partner_Office__c</referenceTo>
        <relationshipLabel>Partner Events</relationshipLabel>
        <relationshipName>Partner_Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Partner Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>